run tests on dev

--- a/.github/workflows/dev_chapman-experiments-3(dev).yml
+++ b/.github/workflows/dev_chapman-experiments-3(dev).yml
@@ -14,6 +14,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:12.5
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: github_actions
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@v2
 
@@ -30,7 +42,30 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
         
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Run tests
+      env:
+        ALLOWED_HOSTS: localhost 127.0.0.1
+        DBHOST: localhosttake_get_sessio
+        DBNAME: github_actions
+        DBPASS: postgres
+        DBUSER: postgres
+        LOG_LOCATION: abc
+        ESI_AUTH_URL : abc
+        ESI_AUTH_ACCOUNT_URL : abc
+        ESI_AUTH_PASSWORD_RESET_URL : abc
+        ESI_AUTH_USERNAME : abc
+        ESI_AUTH_PASS : abc
+        ESI_AUTH_APP : abc
+        EMAIL_MS_HOST : abc
+        EMAIL_MS_USER_NAME : abc
+        EMAIL_MS_PASSWORD : abc
+        FITBIT_MS_USERNAME : abc
+        FITBIT_MS_PASS : abc
+        FITBIT_MS_URL : abc
+        FITBIT_MS_REGISTRATION : abc
+        REDIS : abc
+        SECRET_KEY: super_duper_secret_key
+      run: python manage.py test
       
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
@@ -45,7 +80,7 @@ jobs:
     needs: build
     environment:
       name: 'dev'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      #url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
