run tests on dev

--- a/.github/workflows/dev_chapman-experiments-3(dev).yml
+++ b/.github/workflows/dev_chapman-experiments-3(dev).yml
@@ -45,7 +45,7 @@ jobs:
       - name: Run tests
         env:
           ALLOWED_HOSTS: localhost 127.0.0.1
-          DBHOST: localhosttake_get_sessio
+          DBHOST: localhost
           DBNAME: github_actions
           DBPASS: postgres
           DBUSER: postgres
