--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-asgiref==3.5.0
+asgiref==3.5.*
 attrs==21.4.0
-autobahn==22.2.2
+autobahn==22.7.*
 Automat==20.2.0
 cffi==1.15.0
-channels==3.0.*
-channels-redis==3.4.*
+channels==4.0.*
+channels-redis==4.0.*
 constantly==15.1.0
 cryptography==36.0.1
-daphne==3.0.*
-Django==3.2.*
+daphne==4.0.*
+Django==4.1.*
 django-crispy-forms==1.14.0
 django-tinymce==3.4.*
 hyperlink==21.0.0
@@ -24,8 +24,8 @@ requests==2.27.*
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
-Twisted==22.2.0
+Twisted==22.4.*
 txaio==22.2.1
 typing_extensions==4.1.1
-whitenoise==6.0.*
+whitenoise==6.2.*
 zope.interface==5.4.0
