--- a/.github/workflows/dev_chapman-experiments-3(dev).yml
+++ b/.github/workflows/dev_chapman-experiments-3(dev).yml
@@ -45,6 +45,7 @@ jobs:
       - name: Run tests
         env:
           ALLOWED_HOSTS: localhost 127.0.0.1
+          CSRF_TRUSTED_ORIGINS : http://localhost:8000
           DBHOST: localhost
           DBNAME: github_actions
           DBPASS: postgres
