--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,13 @@ Django==5.2.9
 django-crispy-forms==2.4
 django-tinymce==4.1.0
 hyperlink==21.0.0
+h2==4.3.0 
+hpack==4.1.0 
+hyperframe==6.1.0
 idna==3.10
 incremental==24.7.2
 numpy==2.3.5
+priority==1.3.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
 pyasn1==0.6.1
@@ -27,7 +31,7 @@ requests==2.32.4
 service-identity==24.2.0
 six==1.17.0
 sqlparse==0.5.3
-Twisted==24.11.0
+Twisted==25.5.0
 txaio==23.1.1
 typing_extensions==4.13.2
 whitenoise==6.10.0
