--- a/.github/workflows/master_chapman-experiments-3.yml
+++ b/.github/workflows/master_chapman-experiments-3.yml
@@ -58,6 +58,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'chapman-experiments-3'
+          app-name: '${{ secrets.AZURE_APP_NAME }}'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_717AC42CAFFA42FCA7D382BEE8732F29 }}
